--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav class="dws-menu">
+            <ul>
+                <li><a href="#"><i class="fa fa-">меню1</i></a></li>
+                <li><a href="#"><i class="fa fa-">меню2</i></a></li>
+                <li><a href="#"><i class="fa fa-">меню3</i></a></li>
+                <li><a href="#"><i class="fa fa-">меню4</i></a></li>
+                <li><a href="#"><i class="fa fa-">меню5</i></a></li>
+            </ul>
+            
+        </nav>
+    </header>
 </body>
+
 </html>
