--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <header>
         <nav class="dws-menu">
             <ul>
-                <li><a href="#"><i class="fa fa-">меню1</i></a></li>
-                <li><a href="#"><i class="fa fa-">меню2</i></a></li>
-                <li><a href="#"><i class="fa fa-">меню3</i></a></li>
-                <li><a href="#"><i class="fa fa-">меню4</i></a></li>
-                <li><a href="#"><i class="fa fa-">меню5</i></a></li>
+                <li><a href="#">меню1<i class="fa fa-"></i></a></li>
+                <li><a href="#">меню2<i class="fa fa-"></i></a></li>
+                <li><a href="#">меню3<i class="fa fa-"></i></a></li>
+                <li><a href="#">меню4<i class="fa fa-"></i></a></li>
+                <li><a href="#">меню5<i class="fa fa-"></i></a></li>
             </ul>
             
         </nav>
