--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="eng">
 
 <head>
     <meta charset="UTF-8">
@@ -10,11 +10,10 @@
     <header>
         <nav class="dws-menu">
             <ul>
-                <li><a href="#">меню1<i class="fa fa-"></i></a></li>
-                <li><a href="#">меню2<i class="fa fa-"></i></a></li>
-                <li><a href="#">меню3<i class="fa fa-"></i></a></li>
-                <li><a href="#">меню4<i class="fa fa-"></i></a></li>
-                <li><a href="#">меню5<i class="fa fa-"></i></a></li>
+                <li><a href="#"><i class="fa fa-"></i>Home</a></li>
+                <li><a href="#"><i class="fa fa-"></i>Products</a></li>
+                <li><a href="#"><i class="fa fa-"></i>About</a></li>
+                <li><a href="#"><i class="fa fa-"></i>Contacts</a></li>
             </ul>
             
         </nav>
