add menu stiles

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
 <body>
     <header>
-        <nav class="dws-menu">
-            <ul>
-                <li><a href="#"><i class="fa fa-"></i>Home</a></li>
-                <li><a href="#"><i class="fa fa-"></i>Products</a></li>
-                <li><a href="#"><i class="fa fa-"></i>About</a></li>
-                <li><a href="#"><i class="fa fa-"></i>Contacts</a></li>
+        <nav>
+            <ul class="top-menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contacts</a></li>
             </ul>
             
         </nav>
