--- a/index.html
+++ b/index.html
@@ -10,13 +10,30 @@
 <body>
     <header>
         <nav>
-            <ul class="top-menu">
+            <ul class="topmenu">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
+                <li><a href="#">Products</a>
+                    <ul class="submenu">
+                        <li><a href="#">product1</a>
+                            <ul class="submeu">
+                                <li><a href="#">Sub Item</a></li>
+                                <li><a href="#">Sub Item</a></li>
+                                <li><a href="#">Sub Item</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">product2</a>
+                            <ul class="submeu">
+                                <li><a href="#">Sub Item</a></li>
+                                <li><a href="#">Sub Item</a></li>
+                                <li><a href="#">Sub Item</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contacts</a></li>
             </ul>
-            
+
         </nav>
     </header>
 </body>
